[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "datafusion"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1"
datafusion  = { version = "18", features = ["simd"] }
napi        = { version = "2", features = ["async", "error_anyhow"] }
napi-derive = "2"
tokio       = { version = "1", features = ["full"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
